Fix metrics aggregation enum values